--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,6 @@
 Seccubus V2 Change Log
-??-01-2011 - 2.0.alpha0 - First internal alpha release
+
+Seccubus V2 is currently in Alpha phase. Even though we tested this code
+ourselves do not expect production ready code yet.
+
+15-03-2011 - 2.0.alpha0 - First internal alpha release
