--- a/ChangeLog
+++ b/ChangeLog
@@ -3,4 +3,5 @@ Seccubus V2 Change Log
 Seccubus V2 is currently in Alpha phase. Even though we tested this code
 ourselves do not expect production ready code yet.
 
-15-03-2011 - 2.0.alpha0 - First internal alpha release
+15-03-2011 - 2.0.alpha1 - First internal alpha release
+17-03-2011 - 2.0.alpha2 - Fixed slow speed of updates to multiple findings  
