--- a/ChangeLog
+++ b/ChangeLog
@@ -3,5 +3,13 @@ Seccubus V2 Change Log
 Seccubus V2 is currently in Alpha phase. Even though we tested this code
 ourselves do not expect production ready code yet.
 
+17-03-2011 - 2.0.alpha2 
+
+New features / Issues resolved
+Fixed slow speed of updates to multiple findings  
+
+Bug fixed:
+#34 - Default port for OpenVAS scanning not set correctly
+https://sourceforge.net/apps/trac/seccubus/ticket/34
+
 15-03-2011 - 2.0.alpha1 - First internal alpha release
-17-03-2011 - 2.0.alpha2 - Fixed slow speed of updates to multiple findings  
