--- a/ChangeLog
+++ b/ChangeLog
@@ -7,12 +7,22 @@ ourselves do not expect production ready code yet.
 
 New features / Issues resolved
 Fixed slow speed of updates to multiple findings  
+Scanning with Nessus should work a lot better in this version
 
 Bug fixed:
-#34 - Default port for OpenVAS scanning not set correctly
-https://sourceforge.net/apps/trac/seccubus/ticket/34
-
 #30 - Document running scans
 https://sourceforge.net/apps/trac/seccubus/ticket/30
+#32 - load_ivil command line argument 'scan' is ignored
+https://sourceforge.net/apps/trac/seccubus/ticket/32
+#34 - Default port for OpenVAS scanning not set correctly
+https://sourceforge.net/apps/trac/seccubus/ticket/34
+#35 - ivil does not import title of Nessus finiding
+https://sourceforge.net/apps/trac/seccubus/ticket/35
+#37 - @HOSTS gets expanded to /tmp/seccus.hosts.PID in stead of
+/tmp/seccubus.hosts.PID
+https://sourceforge.net/apps/trac/seccubus/ticket/37
+#38 - nessus2ivil should not die on unknown attribute
+https://sourceforge.net/apps/trac/seccubus/ticket/38
+
 
 15-03-2011 - 2.0.alpha1 - First internal alpha release
