--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,14 @@ Seccubus V2 Change Log
 Seccubus V2 is currently in Alpha phase. Even though we tested this code
 ourselves do not expect production ready code yet.
 
+11-09-2011 - 2.0.alpha4
+New featues / Issues resolved
+* Nmap support
+
+Bigs fixed (tickets closed):
+#8 - Integrate nmpa scans into Seccubus
+https://sourceforge.net/apps/trac/seccubus/ticket/8
+
 15-08-2011 - 2.0.alpha3
 New features / Issues resolved
 * Major bug in the delta engine resolved. It turned out that statusses where
