--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,12 @@ ourselves do not expect production ready code yet.
 11-09-2011 - 2.0.alpha4
 New featues / Issues resolved
 * Nmap support
+  Scanning with is supported from the same server that is running the Nessus
+  Seccubus GUI
+* The results of the Nessus Policy Compliance family of plugins is now
+  supported
+  These plugins are different in the sense that they return multiple results
+  all direntified by a single pluginID
 
 Bigs fixed (tickets closed):
 #8 - Integrate nmpa scans into Seccubus
