--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@ Seccubus V2 Change Log
 Seccubus V2 is currently in Alpha phase. Even though we tested this code
 ourselves do not expect production ready code yet.
 
-11-09-2011 - 2.0.alpha4
+13-09-2011 - 2.0.alpha4
 New featues / Issues resolved
 * Nmap support
   Scanning with is supported from the same server that is running the Nessus
@@ -14,8 +14,11 @@ New featues / Issues resolved
   all direntified by a single pluginID
 
 Bigs fixed (tickets closed):
-#8 - Integrate nmpa scans into Seccubus
+#8 - Integrate nmap scans into Seccubus
 https://sourceforge.net/apps/trac/seccubus/ticket/8
+#50 - scanners/nessus/scan should give a clear error message when ruby is
+not on system
+http://sourceforge.net/apps/trac/seccubus/ticket/50
 
 15-08-2011 - 2.0.alpha3
 New features / Issues resolved
