--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@ Scan management tab
 * Create scans
 * Edit scans
 Developer documentation updated
+End user documentation updated
 
 Bigs fixed (tickets closed):
 ----------------------------
