Little syntax changes and improved build process

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,7 +8,7 @@ If you are looking for stable code you might want to use the V1 branch of this
 project, but be aware that it only supports Nessus with a professional feed
 and is not longer under active development.
 
-xx-xx-2012 - 2.0.beta2
+17-01-2012 - 2.0.beta2
 ======================
 New features / Issues resolved
 ------------------------------
