--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,8 @@ Bigs fixed (tickets closed):
 ----------------------------
 62 - Default locations for config.xml does not include ~seccubus/etc/config.xml
 https://sourceforge.net/apps/trac/seccubus/ticket/62
+67 - Links in top right of UI do nothing
+https://sourceforge.net/apps/trac/seccubus/ticket/67
 
 17-01-2012 - 2.0.beta2
 ======================
