--- a/ChangeLog
+++ b/ChangeLog
@@ -13,7 +13,8 @@ xx-xx-2012 - 2.0.beta3
 New features / Issues resolved
 ------------------------------
 Long(ish) findings now render with a more link that allows you to expand the
-the finding, causing the findigns table to generally dispaly more compact
+the finding, causing the findigns table to generally dispaly more compact.
+Clarified the purpose of status buttons, filters and bul update form in GUI.
 
 Bigs fixed (tickets closed):
 ----------------------------
