--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,8 @@ https://sourceforge.net/apps/trac/seccubus/ticket/67
 https://sourceforge.net/apps/trac/seccubus/ticket/71
 75 - Bulk update: Comments only get added when you select overwrite
 https://sourceforge.net/apps/trac/seccubus/ticket/75
+74 - Minor bugs in nmap2ivil when using nmap 5.21
+https://sourceforge.net/apps/trac/seccubus/ticket/74
 
 17-01-2012 - 2.0.beta2
 ======================
