IP numbers now sort correctly

--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@ New features / Issues resolved
   the finding, causing the findigns table to generally dispaly more compact.
 * Clarified the purpose of status buttons, filters and bul update form in GUI.
 * Added the capability to filter on severity, finding text and remark text
+* IP numbers now sort correctly
 * Restyled status buttons and edit button
 * Removed www/oldstyle GUI
 * Removed Seccubus.Scan.List
