--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,15 @@ If you are looking for stable code you might want to use the V1 branch of this
 project, but be aware that it only supports Nessus with a professional feed
 and is not longer under active development.
 
+xx-x-2012 - 2.0.beta4 
+=====================
+
+New features / Issues resolved
+------------------------------
+
+Bigs fixed (tickets closed):
+----------------------------
+
 14-3-2012 - 2.0.beta3 (a.k.a. the Blackhat edition)
 ==================================================
 
