That makes this the beta6 version

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,15 @@ If you are looking for stable code you might want to use the V1 branch of this
 project, but be aware that it only supports Nessus with a professional feed
 and is not longer under active development.
 
+xx-x-2012 - 2.0.beta6 
+=====================
+
+New features / Issues resolved
+------------------------------
+
+Bigs fixed (tickets closed):
+----------------------------
+
 15-8-2012 - 2.0.beta5 
 =====================
 This is basically version 2.0.beta4 with a nasty critical error removed.
