--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -6,3 +6,4 @@ Peter Slootweg
 Jasper Nugteren
 Trelor (http://github.com/trelor)
 Artien Bel (http://github.com/Ar0xA)
+Fabien Guillaume (http://github.com/FGuillaume)
