--- a/_posts/15-08-13-2.15-Summertime-bug-fixes.md
+++ b/_posts/15-08-13-2.15-Summertime-bug-fixes.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2.15 Summertime bug fixes
+title: Seccubus v2.15 - Summertime bug fixes
 ---
 
 Download it [here](https://github.com/schubergphilis/Seccubus_v2/releases)
