--- a/_posts/15-01-07-2.12-fixes-2.11-release-error.md
+++ b/_posts/15-01-07-2.12-fixes-2.11-release-error.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2.12 fixes and issue with 2.11
+title: Seccubus v2.12 fixes and issue with 2.11
 ---
 
 Download it [here](https://github.com/schubergphilis/Seccubus_v2/releases)
