Correct links this time

--- a/_posts/16-04-22-2.24-rpming.md
+++ b/_posts/16-04-22-2.24-rpming.md
@@ -9,13 +9,13 @@ Not everything went perfect upgrading the build process, so we had to tweak the 
 
 Enhancements
 ------------
-* [#310] - Root CA for v2.seccubus.com ([LetsEncrypt](https://letsencrypt.org/)) is now pinned for the version check
-* [#316] - Clarify create database and grant statement in ConfigTest.pl
+* [#310](https://github.com/schubergphilis/Seccubus_v2/issues/310) - Root CA for v2.seccubus.com ([LetsEncrypt](https://letsencrypt.org/)) is now pinned for the version check
+* [#316](https://github.com/schubergphilis/Seccubus_v2/issues/316) - Clarify create database and grant statement in ConfigTest.pl
 
 Bug Fixes
 ---------
-* [#310] - Version check does not like my certificate
-* [#311] - RPM: Config could not be found after version upgrade to 2.22
-* [#313] - RPM: Seccubus.conf not placed in correct directory (v2.22)
-* [#314] - RPM: v2.22 /opt/seccubus/www/dev should not exist
-* [#315] - RPM: v2.22 dependancy mysql-server is not installed 
+* [#310](https://github.com/schubergphilis/Seccubus_v2/issues/310) - Version check does not like my certificate
+* [#311](https://github.com/schubergphilis/Seccubus_v2/issues/311) - RPM: Config could not be found after version upgrade to 2.22
+* [#313](https://github.com/schubergphilis/Seccubus_v2/issues/313) - RPM: Seccubus.conf not placed in correct directory (v2.22)
+* [#314](https://github.com/schubergphilis/Seccubus_v2/issues/314) - RPM: v2.22 /opt/seccubus/www/dev should not exist
+* [#315](https://github.com/schubergphilis/Seccubus_v2/issues/315) - RPM: v2.22 dependancy mysql-server is not installed
