--- a/_posts/16-07-12-2.26-faster.md
+++ b/_posts/16-07-12-2.26-faster.md
@@ -3,7 +3,7 @@ layout: post
 title: Seccubus v2.26 - Speed improvements and a whole log of bugfixes
 ---
 
-We just release a new Seccubus version, you can download it [here](https://github.com/schubergphilis/Seccubus_v2/releases)
+We just released a new Seccubus version, you can download it [here](https://github.com/schubergphilis/Seccubus_v2/releases)
 
 12-7-2016 - 2.26 - Speed improvements and a whole log of bugfixes
 =================================================================
