Fixed md syntax

--- a/_posts/17-04-13-2.30-better-delta.md
+++ b/_posts/17-04-13-2.30-better-delta.md
@@ -29,16 +29,16 @@ When the 'status before gone' was:
 
 Enhancements
 ------------
-* [#126](](https://github.com/schubergphilis/Seccubus/issues/126) - Delta engine improved: Beter recovery from GONE findings
-* [#257](](https://github.com/schubergphilis/Seccubus/issues/257) - Import/export tools added
-* [#408](](https://github.com/schubergphilis/Seccubus/issues/408) - Seccubus now refuses to load an ivil file with 0 findings
-* [#412](](https://github.com/schubergphilis/Seccubus/issues/412) - Disabled tofu to enhance Docker support
-* [#419](](https://github.com/schubergphilis/Seccubus/issues/419) - Enable crontab support in docker images
-* [#423](](https://github.com/schubergphilis/Seccubus/issues/423) - Show futureGrade in SSLlabs scan results
+* [#126](https://github.com/schubergphilis/Seccubus/issues/126) - Delta engine improved: Beter recovery from GONE findings
+* [#257](https://github.com/schubergphilis/Seccubus/issues/257) - Import/export tools added
+* [#408](https://github.com/schubergphilis/Seccubus/issues/408) - Seccubus now refuses to load an ivil file with 0 findings
+* [#412](https://github.com/schubergphilis/Seccubus/issues/412) - Disabled tofu to enhance Docker support
+* [#419](https://github.com/schubergphilis/Seccubus/issues/419) - Enable crontab support in docker images
+* [#423](https://github.com/schubergphilis/Seccubus/issues/423) - Show futureGrade in SSLlabs scan results
 
 Bug Fixes
 ---------
-* [#403](](https://github.com/schubergphilis/Seccubus/issues/403) - SSLlabs scanner help file was not up to date
-* [#414](](https://github.com/schubergphilis/Seccubus/issues/414) - Mkdir error will no longer appear if entrypoint.sh is run twice
-* [#426](](https://github.com/schubergphilis/Seccubus/issues/426) - Corrections to README.md from Karol Kozakowski merged
-* [#432](](https://github.com/schubergphilis/Seccubus/issues/432) - StaticPkpPolicy not recognized
+* [#403](https://github.com/schubergphilis/Seccubus/issues/403) - SSLlabs scanner help file was not up to date
+* [#414](https://github.com/schubergphilis/Seccubus/issues/414) - Mkdir error will no longer appear if entrypoint.sh is run twice
+* [#426](https://github.com/schubergphilis/Seccubus/issues/426) - Corrections to README.md from Karol Kozakowski merged
+* [#432](https://github.com/schubergphilis/Seccubus/issues/432) - StaticPkpPolicy not recognized
