Pay more attention Frank

--- a/_posts/17-04-13-2.30-better-delta.md
+++ b/_posts/17-04-13-2.30-better-delta.md
@@ -3,6 +3,8 @@ layout: post
 title: Seccubus v2.30 - Improved delta engine and import/export tools
 ---
 
+We just released a new Seccubus version, you can download it [here](https://github.com/schubergphilis/Seccubus/releases/latest) 
+
 One of the things that has been lacking for a while were proper workspace export and import tools. This release adds them and fixes another issue that has been on our whishlist for long, better handling of gone findings reappearing.
 
 Now when a finding that was previously marked as gone reappears in a scan the 'status before gone' is taken into account.
