--- a/_posts/17-06-15-2.34-mojolicious.md
+++ b/_posts/17-06-15-2.34-mojolicious.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Seccubus v2.32 - Fixup release of v2.30
+title: Seccubus v2.34 - Backend rewritten in Mojolicious
 ---
 
 We just released a new Seccubus version, you can download it [here](https://github.com/schubergphilis/Seccubus/releases/latest) 
@@ -16,6 +16,7 @@ This backend rewrite has been in the making for some time now and we are finally
 it into the wild.
 
 What are the major changes?
+
 * Backend rewritten in [Mojolicious](http://mojolicious.org/)
 * Backend API is now REST compliant and located at /api
 * There is no need to run an external webserver for Seccubus, it is built into Mojolicious
