Page title corrected

--- a/_posts/17-08-02-2.38-fixes-and-improvements.md
+++ b/_posts/17-08-02-2.38-fixes-and-improvements.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Seccubus v2.38 - TestSSL release
+title: Seccubus v2.38 - Various fixes and improvements
 ---
 
 We just released a new Seccubus version, you can download it [here](https://github.com/schubergphilis/Seccubus/releases/latest) 
