--- a/_posts/17-10-24-2.42-kali-certs-sbg.md
+++ b/_posts/17-10-24-2.42-kali-certs-sbg.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Seccubus v2.40 - Various fixes and improvements
+title: Seccubus v2.42 - Kali, Certificate validation and State Engine
 ---
 
 We just released a new Seccubus version, you can download it [here](https://github.com/schubergphilis/Seccubus/releases/latest) 
