--- a/_posts/17-12-14-2.46-RedHat-CentOS.md
+++ b/_posts/17-12-14-2.46-RedHat-CentOS.md
@@ -5,26 +5,22 @@ title: Seccubus v2.46 - Packages for RedHat/Centos 7
 
 We just released a new Seccubus version, you can download it from [PackageCloud](https://packagecloud.io/seccubus/releases) or from [GitHub](https://github.com/schubergphilis/Seccubus/releases/latest) 
 
-15-11-2017 - v2.44 - PackageCloud release
-=========================================
-This release cleans up technical debt. Package building has been moved from OpenSuse Build Services to CicleCI
-and packages now automatically are uploade to [our PackageCloud repositories](https://packagecloud.io/seccubus/).
-
-Here you will find two repositories:
-* [Latest](https://packagecloud.io/seccubus/latest) - Follows the latest code that gets merged into the master branch
-* [Releases](https://packagecloud.io/seccubus/releases) - Follows the regular releases
-
-You can configure these repositories on your operating system to include Seccubus upgrades in your regular package updates.
+14-12-2017 - v2.46 - RedHat 7 / Centos 7 packages
+=================================================
+This release adds RPM support for RedHat 7 and CentOS 7. Because Mojolicious and some of its dependancies were not available
+as RPM on any of the standard repos for el7 we are also buildign these RPMs as part of our el7 build street now and are
+pushing these packages to our [packagecloud.io](https://packagecloud.io/seccubus) repository. This makes tweaks like [this one](https://t.co/svO7z1RiRb) by @Ar0xA unneccasary.
 
 Enhancements
 ------------
-* [#597](https://github.com/schubergphilis/Seccubus/issues/597) - do-scan and import ivil now log to syslog
-* [#605](https://github.com/schubergphilis/Seccubus/issues/605) - Container scan command allows scans to only starts on a certain weekday
-* Fedora, Ubuntu and Debian package building has been moved to CircleCI
-* Packages are automatically uploaded to [packagecloud.io](https://packagecloud.io/seccubus/)
-
+* Added support for RedHat 7 / CentOS 7 RPM packages. With the extra needed packages being added to packagecloud.io
 
 Bug Fixes
 ---------
-* [#593](https://github.com/schubergphilis/Seccubus/issues/593) - Fixed incorrect parsing of the values for poodleTls finding in SSLlabs.
-* [#595](https://github.com/schubergphilis/Seccubus/issues/595) - Fixed incorrect parsing of the values for Ticketbleed finding in SSLlabs.
+* #588 - Fix Nmap Plugin ID leak (Thanks @alirezakv)
+* #589 - Fix OpenVAS scan execution bug with only 1 target defined (Thanks @alirezakv)
+* #603 - Nessus scan fails when pdf files cannot be exported (Thanks @Ar0xA)
+* #615 - Docker: when the database was on the data volume the database failed to start
+* #617 - Nikto scanner gives unintended error output
+* Theodoor Scholte fixed some typos in the scanner scripts (Thanks!)
+* Streamlined CircleCI unit testing
