--- a/_posts/17-12-14-2.46-RedHat-CentOS.md
+++ b/_posts/17-12-14-2.46-RedHat-CentOS.md
@@ -17,10 +17,10 @@ Enhancements
 
 Bug Fixes
 ---------
-* #588 - Fix Nmap Plugin ID leak (Thanks @alirezakv)
-* #589 - Fix OpenVAS scan execution bug with only 1 target defined (Thanks @alirezakv)
-* #603 - Nessus scan fails when pdf files cannot be exported (Thanks @Ar0xA)
-* #615 - Docker: when the database was on the data volume the database failed to start
-* #617 - Nikto scanner gives unintended error output
+* [#588](https://github.com/schubergphilis/Seccubus/issues/588) - Fix Nmap Plugin ID leak (Thanks @alirezakv)
+* [#589](https://github.com/schubergphilis/Seccubus/issues/589) - Fix OpenVAS scan execution bug with only 1 target defined (Thanks @alirezakv)
+* [#603](https://github.com/schubergphilis/Seccubus/issues/603) - Nessus scan fails when pdf files cannot be exported (Thanks @Ar0xA)
+* [#615](https://github.com/schubergphilis/Seccubus/issues/615) - Docker: when the database was on the data volume the database failed to start
+* [#617](https://github.com/schubergphilis/Seccubus/issues/617) - Nikto scanner gives unintended error output
 * Theodoor Scholte fixed some typos in the scanner scripts (Thanks!)
 * Streamlined CircleCI unit testing
